--- a/Mifalot-app/src/index.html
+++ b/Mifalot-app/src/index.html
@@ -1,14 +1,22 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>MifalotApp</title>
-  <base href="/">
+  <head>
+    <meta charset = "utf-8">
+    <title> MifalotApp </title>
+    <base href = "/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root>Loading...</app-root>
-</body>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,500" rel="stylesheet">
+    
+    <!-- Adds bootstrap support -->
+    <link href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel = "stylesheet" integrity = "sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href = "https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel = "stylesheet">
+
+
+    <meta name = "viewport" content = "width=device-width, initial-scale=1">
+    <link rel = "icon" type = "image/x-icon" href = "favicon.ico">
+  </head>
+  <body>
+    <app-root> Loading... </app-root>
+  </body>
+
 </html>
