--- a/Mifalot-app/src/index.html
+++ b/Mifalot-app/src/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,500" rel="stylesheet">
     
     <!-- W3 animations -->
-    <link rel = "stylesheet" href = "https://www.w3schools.com/w3css/4/w3.css">
+    <!--<link rel = "stylesheet" href = "https://www.w3schools.com/w3css/4/w3.css">-->
 
     <!-- Adds bootstrap support -->
     <link href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel = "stylesheet" integrity = "sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
